# docling-nextcloud

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  healthcheck.sh  krankerl.toml  package.json  pyproject.toml  requirements.txt  start.sh  webpack.config.js
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
appinfo/: info.xml
ex_app/lib/: main.py
ex_app/lib/backends/: __init__.py  cloud.py  local.py
ex_app/lib/llm/: __init__.py  local_llm.py
src/: App.vue  main.js
templates/: main.php
test_data/: download_pdfs.py  test_docling_local.py
tests/: __init__.py  test_main.py
