[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docling-nextcloud"
version = "1.0.0"
description = "AI-powered document processing ExApp for Nextcloud"
readme = "README.md"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "Ihsan Mokhlis", email = "contact@ihsanmokhlis.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]
keywords = ["nextcloud", "docling", "document", "conversion", "pdf", "markdown"]

dependencies = [
    "nc-py-api>=0.17.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "docling>=2.5.0",
    "docling-core>=2.5.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
ocr = [
    "easyocr>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/your-org/docling-nextcloud"
Documentation = "https://github.com/your-org/docling-nextcloud#readme"
Repository = "https://github.com/your-org/docling-nextcloud"
Issues = "https://github.com/your-org/docling-nextcloud/issues"

[tool.setuptools.packages.find]
where = ["ex_app/lib"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

